# proper

./: .gitignore  LICENSE  README.md  jlog.txt  log.txt  proper.cabal
glfw-demo/: GLFW-b-demo.cabal
glfw-demo/src/: Main.hs
src/: .GLFWHelpers.hs.swp  .Visnov.hs.swp  GLFWHelpers.hs  IMHelpers.hs  Main.hs  ProperDemo.hs  Sound.hs  Sprite.hs  Visnov.hs  VisnovDesc.hs
