Name:                PROPER
Version:             0.1
Synopsis:            Pennapps 2013
License:             GPLv3
Author:              Jesse Selover
Maintainer:          jselover@mit.edu
Stability:           Experimental
Build-type:          Simple
Cabal-version:       >=1.2

Executable proper
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends: base                        >= 4
               , OpenGL                      >= 2.8
               , graphics-drawingcombinators >= 1.4.4.1
               , mtl                         >= 2.1
               , bitmap                      >= 0.0.2
               , bitmap-opengl               >= 0.0.0.1
               , stb-image                   >= 0.2.1
