Name:                PROPER
Version:             0.1
Synopsis:            Pennapps 2013
License:             GPL-3
Author:              Jesse Selover
Maintainer:          jselover@mit.edu
Stability:           Experimental
Build-type:          Simple
Cabal-version:       >=1.2

Executable proper
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends: base                        >= 4
               , containers                  >= 0.5
               , OpenGL                      >= 2.8
               , graphics-drawingcombinators >= 1.4.4.1
               , mtl                         >= 2.1
               , transformers                >= 0.3
               , bitmap                      >= 0.0.2
               , bitmap-opengl               >= 0.0.0.1
               , stb-image                   >= 0.2.1
               , SDL                         >= 0.6.5
               , SDL-mixer                   >= 0.6.1
               , async                       >= 2.0.1.4
