Name:                PROPER
Version:             0.1
Synopsis:            Pennapps 2013
License:             GPL-3
Author:              Jesse Selover
Maintainer:          jselover@mit.edu
Stability:           Experimental
Build-type:          Simple
Cabal-version:       >=1.2

Executable proper
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends: base                        >= 4
               , containers                  >= 0.5
               , mtl                         >= 2.1
               , transformers                >= 0.3
               , SDL                         >= 0.6.5
               , SDL-image                   >= 0.6.1
               , SDL-ttf                     >= 0.6.1
               , SDL-mixer                   >= 0.6.1
               , SDL-gfx                     >= 0.6.0
               , async                       >= 2.0.1.4
               , pretty                      == 1.1.*
               , stm                         == 2.4.*
